--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,6 @@
-#Fri Mar 28 16:52:36 CST 2025
+# libs.versions.toml
+# Created by Ulises Gonzalez
+# Copyright (c) 2025. All rights reserved
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-bin.zip
