--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
- - AndroidManifest.xml - app
- - Created by Ulises Gonzalez
- - Copyright (c) 2025. All rights reserved
--->
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -10,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".miventa.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,16 +18,26 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".login.ui.view.activity.LoginActivity"
+            android:name=".miventa.login.ui.view.activity.LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.MiVentaCompose">
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+
+        <activity
+            android:name=".miventa.order.ui.view.activity.OrderActivity"
+            android:exported="true"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+
+        <activity
+            android:name=".miventa.splash.view.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MiVentaCompose.Splash"
+            android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
