--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,53 +2,125 @@
 # Created by Ulises Gonzalez
 # Copyright (c) 2025. All rights reserved
 [versions]
-# core
-coreKtx = "1.15.0"
-lifecycleRuntimeKtx = "2.8.7"
-# compose
-activityCompose = "1.10.1"
-composeBom = "2025.03.01"
-foundation = "1.7.8"
-# libs
-uiTextGoogleFonts = "1.7.8"
-materialIconsExtended = "1.7.8"
+# Core
+core-ktx = "1.15.0"
+lifecycle-ktx = "2.8.7"
+coroutines = "1.10.1"
+livedata = "1.7.8"
+# Compose
+lifecycle-compose = "2.8.7"
+activity-compose = "1.10.1"
+compose-bom = "2025.03.01"
+compose-animation = "1.7.8"
+compose-foundation = "1.7.8"
+# Libs
+splashscreen = '1.0.1'
+text-google-fonts = "1.7.8"
+material-icons-extended = "1.7.8"
 navigation-compose = "2.8.9"
 kotlin-serialization = "1.6.3"
-# test
+konfetti-compose = "2.0.4"
+# Hilt
+lib-hilt = "2.56.1"
+lib-hilt-compose = "1.2.0"
+# Firebase
+lib-firebase-core = "21.1.1"
+lib-firebase = "33.12.0"
+lib-firebase-auth = "23.2.0"
+lib-firebase-crashlytics = "19.4.2"
+lib-firebase-analytics = "22.4.0"
+# Test
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-# plugins
+junit-version = "1.2.1"
+espresso-core = "3.6.1"
+hilt-testing = "2.56.1"
+# Plugins
 agp = "8.9.1"
 kotlin = "2.0.21"
+hilt = "2.51.1"
+google-services = "4.4.2"
+google-crashlytics = "3.0.3"
+ksp = "2.0.21-1.0.27"
+material = "1.12.0"
+appcompat = "1.7.0"
+constraintlayout = "2.2.1"
+navigation-fragment-ktx = "2.8.9"
+navigation-ui-ktx = "2.8.9"
 
 [libraries]
-# core
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-# compose
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
+# Core
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-ktx" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle-ktx" }
+androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle-ktx" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-compose" }
+org-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+androidx-compose-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "livedata" }
+# Compose
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "text-google-fonts" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-# libs
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "compose-animation" }
+androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose-foundation" }
+# Libs
+androidx-splashscreen = { module = 'androidx.core:core-splashscreen', version.ref = 'splashscreen' }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons-extended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 kotlin-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlin-serialization" }
-# test
+konfetti-compose = { module = "nl.dionsegijn:konfetti-compose", version.ref = "konfetti-compose" }
+# Hilt
+com-google-hilt = { module = "com.google.dagger:hilt-android", version.ref = "lib-hilt" }
+com-google-hilt-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "lib-hilt-compose" }
+com-google-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "lib-hilt" }
+# Firebase
+com-firebase-core = { group = "com.google.firebase", name = "firebase-core", version.ref = "lib-firebase-core" }
+com-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "lib-firebase" }
+com-firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "lib-firebase-auth" }
+com-firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics-ktx", version.ref = "lib-firebase-crashlytics" }
+com-firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx", version.ref = "lib-firebase-analytics" }
+# Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit-version" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+com-google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt-testing" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-fragment-ktx" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
+
+[bundles]
+com-google-hilt-libs = [
+    "com-google-hilt",
+    "com-google-hilt-compose",
+]
+androidx-lifecycle-libs = [
+    "androidx-lifecycle-runtime-ktx",
+    "androidx-lifecycle-viewmodel-ktx",
+    "androidx-lifecycle-livedata-ktx",
+    "androidx-lifecycle-viewmodel-compose",
+]
+com-firebase-libs = [
+    "com-firebase-core",
+    "com-firebase-bom",
+    "com-firebase-auth",
+    "com-firebase-crashlytics",
+    "com-firebase-analytics",
+]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+com-google-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+com-google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
+com-google-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "google-crashlytics" }
+com-google-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
