--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,18 +20,18 @@
         <activity
             android:name=".presentation.start.ui.login.view.LoginActivity"
             android:exported="true"
-            android:windowSoftInputMode="stateHidden|adjustPan" />
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".presentation.order.OrderActivity"
             android:exported="true"
-            android:windowSoftInputMode="stateHidden|adjustPan" />
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".presentation.start.ui.splash.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.MiVentaCompose.Splash"
-            android:windowSoftInputMode="stateHidden|adjustPan">
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
