--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,9 @@ junit = "4.13.2"
 junit-version = "1.2.1"
 espresso-core = "3.6.1"
 hilt-testing = "2.56.1"
+mockito = "5.16.1"
+mockito-inline = "5.2.0"
+robolectric = "4.14.1"
 # Plugins
 agp = "8.9.1"
 kotlin = "2.0.21"
@@ -87,9 +90,14 @@ com-firebase-crashlytics = { group = "com.google.firebase", name = "firebase-cra
 com-firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx", version.ref = "lib-firebase-analytics" }
 # Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+com-google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt-testing" }
+org-mockito-core = { module = 'org.mockito:mockito-core', version.ref = 'mockito' }
+org-mockito-inline = { module = 'org.mockito:mockito-inline', version.ref = "mockito-inline" }
+org-robolectric = { module = 'org.robolectric:robolectric', version.ref = "robolectric" }
+org-coroutines-test = { module = 'org.jetbrains.kotlinx:kotlinx-coroutines-test', version.ref = 'coroutines' }
+# AndroidTest
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit-version" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
-com-google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt-testing" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
@@ -119,6 +127,10 @@ com-firebase-libs = [
     "com-firebase-auth",
     "com-firebase-crashlytics",
     "com-firebase-analytics",
+]
+org-mockito-libs = [
+    'org-mockito-core',
+    'org-mockito-inline',
 ]
 
 [plugins]
