[Improvement][Ulises] Add - animations

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Dfile.enc
 app.name=Mi Venta
 app.name.debug=Mi Venta Debug
 database.name=database
+preferences.name=preferences
